# prLSTM

./: .gitignore  LICENSE  README.md  pyproject.toml
src/headstartlstm/: __init__.py  _metal.py  _parallel.py  _persistent.py  _torch.py  _triton.py
src/headstartlstm/_csrc/: lstm_cell.cpp  lstm_metal.mm
src/prlstm/: __init__.py  _metal.py  _parallel.py  _persistent.py  _torch.py  _triton.py
src/prlstm/_csrc/: lstm_cell.cpp  lstm_metal.mm
tests/: test_cpp.py  test_metal.py  test_parallel.py  test_triton.py
